--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		Juego al lol :( <br>
 
 <img src="eze.png"width="100px">
+<img src="rafa.png"width="100px">
 <img src="GIAN.jpeg"width="100px"> <br>
 
 <h1> ANDATEEEEEEE</h1> <br>
