--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <img src="eze.png"width="100px">
 <img src="rafa.png"width="100px">
+<img src="giann.jpeg"width="100px">
 <img src="GIAN.jpeg"width="100px"> <br>
 
 <h1> ANDATEEEEEEE</h1> <br>
