--- a/index.html
+++ b/index.html
@@ -1,80 +1,80 @@
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="Nashee.css">
+		
 	</head>
 
-	<style>
-
-table, h1 {
-  border:1px solid black;
-}
-	</style>
 	<body>
-		<div>
-		LOS MEJORES GOLES DE MESSI <br>
-	</div>
-<h2>
+		<h2>¿Cúanto sabes de la selección?</h2>
 
-</h2>
- <div>
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/Ht2MbBJ3zAA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		
 
-	
+	<form action="archivo.php" method="POST">
 
-<table style="width:100%">	
-<div>
-<tr>
-	<p>GOLES<p>
-</tr>
-<tr>
-	<h1>TOP 10: Vs Uruguay 2012<h1>
-	
-</tr>
-<tr>
-	<h1>TOP 9: Vs Nigeria 2014<h1>
+		<label for="Nombre">Nombre:</label><br>
+		<input type="text" id="Nombre" name="Nombre" value=""><br>
+		<label for="Apellido">Apellido:</label><br>
+		<input type="text" id="Apellido" name="Apellido" value=""><br>
+		<label for="Hincha">Hincha de:</label><br>
+		<input type="text" id="Hincha" name="Hincha" value="">
 
-</tr>
-<tr>
-	<h1>TOP 8: Vs Iran 2014<h1>
+		<p> ¿Con quién sonrie más Messi?</p>
 
-</tr>
-<tr>
-	<h1>TOP 7: Vs Nigeria 2018<h1>
+		<input type="radio" id="Antonella" name="Messi" value="Antonella">
+		<label for="Antonella">Antonella</label><br>
+		<input type="radio" id="De Paul" name="Messi" value="De Paul">
+		<label for="De Paul">De Paul</label><br>
+		<input type="radio" id="Autito de cars" name="Messi" value="Autito de cars">
+		<label for="Autito de cars">Autito de cars</label><br>
+		<input type="radio" id="Kun Aguero" name="Messi" value="Kun Aguero">
+		<label for="Kun Aguero">Kun Aguero</label>
 
-</tr>
-<tr>
-	<h1>TOP 6: Vs México 2007<h1>
+		<p>¿Quiénes son los 3 máximos goleadores?</p>
 
-</tr>
-<tr>
-	<h1>TOP 5: Vs Bosnia 2014<h1>
+		<input type="checkbox" id="eldiego" name="goleadores" value="eldiego">
+  		<label for="eldiego"> Maradona</label><br>
+		<input type="checkbox" id="kun" name="goleadores" value="kun">
+  		<label for="kun"> Aguero</label><br>
+  		<input type="checkbox" id="pipita" name="goleadores" value="pipita">
+  		<label for="pipita"> Higuaín</label><br>
+  		<input type="checkbox" id="distefano" name="goleadores" value="distefano">
+  		<label for="distefano"> Di Stéfano</label><br>
+		<input type="checkbox" id="messigol" name="goleadores" value="messigol">
+  		<label for="messigol"> Messi</label><br>
+		<input type="checkbox" id="batigol" name="goleadores" value="batigol">
+  		<label for="batigol"> Batistuta</label><br>
 
-</tr>
-<tr>
-	<h1>TOP 4: Vs Brasil 2010<h1>
+		  <p>¿Qué DT ganó el mundial de 1986?</p>
 
-</tr>
-<tr>
-	<h1>TOP 3: Vs Colombia 2016<h1>
+		  <label for="DT">Director Técnico:</label><br>
+		  <input type="text" id="DT" name="DT" value=""><br>
 
-</tr>
-<tr>
-	<h1>TOP 2: Vs Estados Unidos 2016<h1>
+		  <p>¿Cúantos títulos tiene la selección?</p>
 
-</tr>
-<tr>
-	<h1>TOP 1: Vs Brasil 2012<h1>
+			<label for="titulos">Elegí una opción:</label>
+ 			<select id="titulos" name="titulos" size="5" multiple>
+    		<option value="f">27 (Copa Mundial, Copa América, Copa Confederaciones)</option>
+    		<option value="f">20 (Copa Mundial, Copa América, JJOO, Copa Confederaciones)</option>
+    		<option value="v">20 (Copa Mundial, Copa América, Copa Confederaciones, Campeonato Panamericano, Copa Artemio Franchi)</option>
+   			<option value="f">23 (Copa Mundial, Copa América, Copa Confederaciones, Campeonato Panamericano, Copa Artemio Franchi, Copa de Naciones, Superclásico de las Américas)</option>
+			<option value="f">18 (Copa Mundial, Copa América, JJOO)</option>
+			</select><br>
 
-</tr>
-</table>
+			<p>¿Quién es el máximo hijo de la albiceleste?</p>
 
-<div>
+			<input type="radio" id="Chile" name="Hijo" value="Chile">
+			<label for="Chile">Chile</label><br>
+			<input type="radio" id="Uruguay" name="Hijo" value="Uruguay">
+			<label for="Uruguay">Uruguay</label><br>
+			<input type="radio" id="Inglaterra" name="Hijo" value="Inglaterra">
+			<label for="Inglaterra">Inglaterra</label><br>
+			<input type="radio" id="Brasil" name="Hijo" value="Brasil">
+			<label for="Brasil">Brasil</label><br>
+			<input type="radio" id="Bolivia" name="Hijo" value="Bolivia">
+			<label for="Bolivia">Bolivia</label>
 
-	EL MEJOR JUGADOR DEL MUNDO
+	</form>
 
-</div>
 
-<a href="https://es.wikipedia.org/wiki/Anexo:Goles_internacionales_de_Lionel_Messi">Todos los goles de Messi con la selección</a>
 	</body>
 
 </html>
