--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@
 			<input type="radio" id="Brasil" name="Hijo" value="Brasil">
 			<label for="Brasil">Brasil</label><br>
 			<input type="radio" id="Bolivia" name="Hijo" value="Bolivia">
-			<label for="Bolivia">Bolivia</label>
+			<label for="Bolivia">Bolivia</label><br><br>
 
+			<input type="submit">
 	</form>
 
 
